<resources>
    <string name="app_name">MindBrizz</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="obsessive_compulsive_disorder">Obsessive Compulsive Disorder</string>
    <string name="porn_addiction">porn Addiction</string>
    <string name="dealing_with_stress">Dealing with Stress</string>
    <string name="dealing_with_anxiety">Dealing with Anxiety</string>
    <string name="dealing_with_anger">Dealing with Anger</string>
    <string name="dealing_with_suicide">Dealing with suicide</string>
    <string name="welcome_to_mindbrizz">Welcome to MindBrizz</string>
    <string name="todo">TODO</string>
    <string name="think_to_yourself_i_m_feeling_really_angry_right_now_without_trying_to_justify_it_or_understand_why_accepting_the_feeling_without_trying_to_explain_it_can_sometimes_be_helpful_take_yourself_out_of_the_situation_you_could_go_for_a_walk_go_to_a_different_room_or_log_off_if_the_situation_is_online_use_a_code_word_for_when_you_feel_angry_you_could_say_this_to_others_or_to_yourself_to_signal_that_you_need_some_time_to_yourself_before_talking_any_further_this_may_help_you_avoid_having_to_explain_yourself_in_the_moment_focus_on_what_s_around_you_try_listing_5_things_you_can_see_4_things_you_can_touch_3_things_you_can_hear_2_things_you_can_smell_and_1_thing_you_can_taste_focus_on_your_breath_breathe_slowly_and_deeply_try_breathing_in_through_your_nose_and_out_through_your_mouth_some_people_find_it_helpful_to_count_while_doing_this_use_a_grounding_object_keep_a_small_object_with_you_to_hold_and_focus_on_when_you_feel_angry_for_example_you_could_use_a_marble_a_fidget_toy_or_a_piece_of_fabric_keep_notes_on_your_phone_with_reminders_to_yourself_about_what_to_do_when_you_feel_angry">Think to yourself \'I’m feeling really angry right now\' without trying to justify it or understand why. Accepting the feeling without trying to explain it can sometimes be helpful. Take yourself out of the situation. You could go for a walk, go to a different room or log off if the situation is online. Use a code word for when you feel angry. You could say this to others or to yourself to signal that you need some time to yourself before talking any further. This may help you avoid having to explain yourself in the moment. Focus on what\'s around you. Try listing 5 things you can see, 4 things you can touch, 3 things you can hear, 2 things you can smell and 1 thing you can taste. Focus on your breath. Breathe slowly and deeply. Try breathing in through your nose and out through your mouth. Some people find it helpful to count while doing this. Use a grounding object. Keep a small object with you to hold and focus on when you feel angry. For example, you could use a marble, a fidget toy or a piece of fabric. Keep notes on your phone with reminders to yourself about what to do when you feel angry.</string>
    <string name="relax_your_body_if_you_can_feel_your_body_getting_tense_try_focusing_on_each_part_of_your_body_in_turn_to_tense_and_then_relax_your_muscles">Relax your body. If you can feel your body getting tense, try focusing on each part of your body in turn to tense and then relax your muscles.</string>
    <string name="try_mindfulness_techniques_mindfulness_can_help_you_to_be_aware_of_when_you_re_getting_angry_and_it_can_help_calm_your_body_and_mind">Try mindfulness techniques. Mindfulness can help you to be aware of when you\'re getting angry. And it can help calm your body and mind</string>
    <string name="use_up_your_energy_safely_in_other_ways_this_can_help_relieve_some_of_your_angry_feelings_in_a_way_that_doesn_t_hurt_you_or_others_for_example_you_could_try_tearing_up_paper_hitting_a_pillow_or_smashing_ice_cubes">Use up your energy safely in other ways. This can help relieve some of your angry feelings in a way that doesn\'t hurt you or others. For example, you could try tearing up paper, hitting a pillow or smashing ice cubes.</string>
    <string name="mama_gmail_com">mama@gmail.com</string>
    <string name="gianna">Gianna</string>
    <string name="home">Home</string>


    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="settings">Settings</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="group_chat">Group Chat</string>
    <string name="profile">Profile</string>
    <string name="update_profile">Update profile</string>
    <string name="log_out">Log Out</string>
    <string name="others">Others</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="title_activity_test">Test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_a">We will send you a</string>
    <string name="one_time_password">One time Password</string>
    <string name="on_this_mobile_number">on this mobile number</string>
    <string name="enter_your_phone_number">Enter your phone Number</string>
</resources>