<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/homepic"
        android:title="@string/home"/>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/settingspic"
        android:title="@string/settings"/>

    <item
        android:id="@+id/nav_gaming"
        android:icon="@drawable/chillogo"
        android:title="@string/settings"/>



    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/chat"
        android:title="@string/group_chat"/>

    <item
        android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/nav_updateprofile"
                android:icon="@drawable/update"
                android:title="@string/update_profile"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/log_out"/>
        </menu>
    </item>


    <item
        android:title="@string/others">
        <menu>
            <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/sharepic"
                 android:title="@string/share"/>
         
        </menu>
    </item>



</menu>