<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".VerificationActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/verificationpic"
        android:scaleType="centerCrop"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_verification"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#004C00"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:text="@string/we_will_send_you_a"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textColor="@color/gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:text="@string/one_time_password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_height="wrap_content"
        android:text="@string/on_this_mobile_number"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="@color/gray"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="15dp"
            android:layout_margin="15dp"
            android:background="@color/white">

            <EditText
                android:id="@+id/editNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_shape"
                android:ems="1"
                android:hint="@string/enter_your_phone_number"
                android:inputType="phone"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold|normal" />

            <Button
                android:id="@+id/continueBtn"
                android:text="Continue"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:textStyle="bold|normal"
                android:backgroundTint="#013E01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>