<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/drawerlayout"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"

  >



    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:fitsSystemWindows="true"
        android:layout_gravity="start" />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.MindBrizz.AppBarOverlay">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/light_blue"
                    app:popupTheme="@style/Theme.MindBrizz.PopupOverlay" />

            </com.google.android.material.appbar.AppBarLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_mindbrizz"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="20dp"/>


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:columnOrderPreserved="false"
                android:rowCount="4">


                <androidx.cardview.widget.CardView
                    android:layout_width="170dp"
                    android:id="@+id/ctxtsuicide"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/orange"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="5dp">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="91dp"
                            android:layout_height="79dp"
                            android:layout_marginTop="18dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/suicide" />

                        <TextView
                            android:id="@+id/txtsuicide"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/dealing_with_suicide"
                            android:textColor="@color/dark_blue"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="170dp"
                    android:id="@+id/txtanger"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/orange"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:id="@+id/ctxtAnger"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="102dp"
                            android:layout_height="77dp"
                            android:layout_marginTop="18dp"
                            android:src="@drawable/anger" />

                        <TextView
                            android:id="@+id/txtangerr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/dealing_with_anger"
                            android:textColor="@color/dark_blue"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/orange"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:id="@+id/ctxtAnxiety"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="89dp"
                            android:layout_height="83dp"
                            android:layout_marginTop="18dp"
                            android:src="@drawable/anxiety" />

                        <TextView
                            android:id="@+id/txtanxiety"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/dealing_with_anxiety"
                            android:textColor="@color/dark_blue"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/orange"
                    app:cardCornerRadius="12dp"
                    android:id="@+id/ctxtStress"
                    app:cardElevation="5dp">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="97dp"
                            android:layout_height="90dp"
                            android:layout_marginTop="18dp"
                            android:src="@drawable/stresspic" />

                        <TextView
                            android:id="@+id/txtstress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/dealing_with_stress"
                            android:textColor="@color/dark_blue"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="170dp"
                    android:id="@+id/ctxtpornAddiction"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/orange"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="5dp">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="72dp"
                            android:layout_marginTop="18dp"
                            android:src="@drawable/paddiction" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/porn_addiction"
                            android:textColor="@color/dark_blue"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/orange"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="5dp"
                    android:id="@+id/ctxtocd">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="119dp"
                            android:layout_height="80dp"
                            android:layout_marginTop="18dp"
                            android:src="@drawable/ocdpic" />

                        <TextView
                            android:id="@+id/txtocd"
                            android:layout_width="wrap_content"
                            android:layout_height="29dp"
                            android:layout_marginTop="20dp"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/obsessive_compulsive_disorder"
                            android:textColor="@color/dark_blue"
                            android:textSize="10sp"
                            tools:ignore="SmallSp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/gray"
                    android:id="@+id/txtchat"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:id="@+id/ctxtwhatsapp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="152dp"
                            android:layout_height="78dp"
                            android:layout_marginTop="18dp"
                            android:src="@drawable/chatpic" />

                        <TextView
                            android:id="@+id/txtchatt"
                            android:layout_width="wrap_content"
                            android:layout_height="29dp"
                            android:layout_marginTop="20dp"
                            android:fontFamily="sans-serif-black"
                            android:text="Chat with A Therapist"
                            android:textColor="@color/dark_blue"
                            android:textSize="12sp"
                            tools:ignore="SmallSp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/ctxtrelaxation"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/orange"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="5dp">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="89dp"
                            android:layout_height="83dp"
                            android:layout_marginTop="18dp"
                            android:src="@drawable/img_1" />

                        <TextView
                            android:id="@+id/txtrelaxation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="sans-serif-black"
                            android:text="Relaxation Techniques"
                            android:textColor="@color/dark_blue"
                            android:textSize="15sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </GridLayout>


        </LinearLayout>



    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout >